--- a/data/apps.json
+++ b/data/apps.json
@@ -632,6 +632,21 @@
     "logo_url": "https://raw.githubusercontent.com/sabamdarif/Termux-AppStore/main/apps/Obsidian/icon-64.png"
   },
   {
+   "app_name": "OrcaSlicer",
+    "folder_name": "OrcaSlicer",
+    "description": "Advanced 3D printing slicer software for preparing 3D models for printing.",
+    "categories": [
+      "Graphics"
+    ],
+    "app_type": "distro",
+    "run_cmd": "orca-slicer",
+    "supported_arch": "aarch64",
+    "version": "v1.76.81",
+    "supported_distro": "Ubuntu",
+    "package_name": "brave-browser",
+    "logo_url": "https://raw.githubusercontent.com/CodeMasterCody3D/Termux-AppStore/refs/heads/main/apps/OrcaSlicer/logo.png"
+  },
+  {
     "app_name": "Qbittorrent",
     "folder_name": "Qbittorrent",
     "description": "A Qt6 based BitTorrent client",
