--- a/data/apps.json
+++ b/data/apps.json
@@ -636,7 +636,7 @@
     "folder_name": "OrcaSlicer",
     "description": "Advanced 3D printing slicer software for preparing 3D models for printing.",
     "categories": [
-      "Graphics"
+      "Graphics",
       "Development"
     ],
     "app_type": "distro",
