--- a/data/apps.json
+++ b/data/apps.json
@@ -638,11 +638,11 @@
     "categories": [
       "Graphics"
     ],
-    "app_type": "native",
+    "app_type": "distro",
     "run_cmd": "orca-slicer",
     "supported_arch": "aarch64",
     "version": "v2.3.0",
-    "supported_distro": "ubuntu",
+    "supported_distro": "Ubuntu",
     "install_url": "https://raw.githubusercontent.com/CodeMasterCody3D/Termux-AppStore/refs/heads/main/apps/OrcaSlicer/install.sh",
     "uninstall_url": "https://raw.githubusercontent.com/CodeMasterCody3D/Termux-AppStore/refs/heads/main/apps/OrcaSlicer/uninstall.sh",
     "package_name": "orca-slicer",
